test/conformance/chainsaw/validating-policies/report/message-exp/report.yaml
apiVersion: v1
items:
- apiVersion: wgpolicyk8s.io/v1alpha2
  kind: PolicyReport
  metadata:
    generation: 1
    labels:
      app.kubernetes.io/managed-by: kyverno
    ownerReferences:
    - apiVersion: apps/v1
      kind: Deployment
      name: no-env
  results:
  - category: Other
    message: Deployment labels must be env=prod but no env label is present
    policy: check-deployment-labels
    result: fail
    scored: true
    severity: medium
    source: KyvernoValidatingPolicy
  scope:
    apiVersion: apps/v1
    kind: Deployment
    name: no-env
  summary:
    error: 0
    fail: 1
    pass: 0
    skip: 0
    warn: 0
- apiVersion: wgpolicyk8s.io/v1alpha2
  kind: PolicyReport
  metadata:
    generation: 1
    labels:
      app.kubernetes.io/managed-by: kyverno
    ownerReferences:
    - apiVersion: apps/v1
      kind: Deployment
      name: good-deployment
  results:
  - category: Other
    message: success
    policy: check-deployment-labels
    result: pass
    scored: true
    severity: medium
    source: KyvernoValidatingPolicy
  scope:
    apiVersion: apps/v1
    kind: Deployment
    name: good-deployment
  summary:
    error: 0
    fail: 0
    pass: 1
    skip: 0
    warn: 0
- apiVersion: wgpolicyk8s.io/v1alpha2
  kind: PolicyReport
  metadata:
    generation: 1
    labels:
      app.kubernetes.io/managed-by: kyverno
    ownerReferences:
    - apiVersion: apps/v1
      kind: Deployment
      name: bad-deployment
  results:
  - category: Other
    message: Deployment labels must be env=prod but found env=testing
    policy: check-deployment-labels
    result: fail
    scored: true
    severity: medium
    source: KyvernoValidatingPolicy
  scope:
    apiVersion: apps/v1
    kind: Deployment
    name: bad-deployment
  summary:
    error: 0
    fail: 1
    pass: 0
    skip: 0
    warn: 0
